[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/indicator-empty.png" type="Texture" id=2]
[ext_resource path="res://audio/sfx/ping.mp3" type="AudioStream" id=3]
[ext_resource path="res://fonts/ARCO for OSX.otf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/!sketchytimes.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenes/SettingsSurvey.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Keybinds.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
corner_detail = 1

[sub_resource type="DynamicFont" id=3]
size = 120
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 36
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=12]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=14]
size = 36
font_data = ExtResource( 6 )

[sub_resource type="QuadMesh" id=6]
size = Vector2( 0.464, 0.6 )

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("SettingsPage/ViewportContainer/ViewportSettings")

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 7 )

[node name="Player" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cull_mask = 524287

[node name="MoveTween" type="Tween" parent="."]

[node name="OtherTween" type="Tween" parent="."]

[node name="OtherOtherTween" type="Tween" parent="."]

[node name="UIndicator" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 100, 450 )

[node name="LIndicator" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 50, 500 )

[node name="DIndicator" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 100, 550 )

[node name="RIndicator" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 150, 500 )

[node name="PingPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
attenuation_model = 3
max_db = 2.0
bus = "Ping"

[node name="DialoguePlayer" type="AudioStreamPlayer3D" parent="."]
bus = "Dialogue"

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
enabled = true
cast_to = Vector3( 0, -10, 0 )
collide_with_areas = true
collide_with_bodies = false

[node name="WordBox" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YesNoBox" type="Control" parent="WordBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -200.0
margin_right = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Label" parent="WordBox/YesNoBox"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -100.0
margin_right = 256.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "YES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Label" parent="WordBox/YesNoBox"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -100.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "NO"
align = 1
valign = 1

[node name="TitleBox" type="Control" parent="WordBox"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WordBox/TitleBox"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="WordBox/TitleBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -376.0
margin_top = 50.0
margin_right = 376.0
custom_fonts/font = SubResource( 3 )
text = "One Ticket to the Lonely Soul Scarecrow Show."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Label" parent="WordBox/TitleBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -371.0
margin_top = -96.0
margin_right = 371.0
margin_bottom = -32.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press Spacebar to start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="WordBox/TitleBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -371.0
margin_top = -160.0
margin_right = 371.0
margin_bottom = -96.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hold Q for controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndBox" type="Control" parent="WordBox"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="WordBox/EndBox"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="WordBox/EndBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -376.0
margin_top = 150.0
margin_right = 376.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 3 )
text = "This is the end."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgain" type="Label" parent="WordBox/EndBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -371.0
margin_top = -224.0
margin_right = 371.0
margin_bottom = -160.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press Spacebar to play again"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="WordBox/EndBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -371.0
margin_top = -160.0
margin_right = 371.0
margin_bottom = -96.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Hold Q to see credits"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Label" parent="WordBox/EndBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -371.0
margin_top = -96.0
margin_right = 371.0
margin_bottom = -32.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press Escape to quit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameControls" type="Control" parent="WordBox"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="WordBox/GameControls"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WordBox/GameControls"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_top = 32.0
margin_right = 361.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Default Controls"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="WordBox/GameControls"]
margin_left = 152.0
margin_top = 96.0
margin_right = 873.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "(rebindable in settings)"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QWE" type="Control" parent="WordBox/GameControls"]
margin_left = 75.0
margin_top = 150.0
margin_right = 475.0
margin_bottom = 550.0

[node name="Q" type="Control" parent="WordBox/GameControls/QWE"]
margin_right = 100.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="WordBox/GameControls/QWE/Q"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Q"
align = 1
valign = 1

[node name="Control" type="Label" parent="WordBox/GameControls/QWE/Q"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -90.0
margin_right = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Turn left"
align = 1
valign = 1
autowrap = true

[node name="W" type="Control" parent="WordBox/GameControls/QWE"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -100.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="WordBox/GameControls/QWE/W"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "W"
align = 1
valign = 1

[node name="Control" type="Label" parent="WordBox/GameControls/QWE/W"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -90.0
margin_right = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Move ahead"
align = 1
valign = 1
autowrap = true

[node name="E" type="Control" parent="WordBox/GameControls/QWE"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -200.0
margin_right = -100.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="WordBox/GameControls/QWE/E"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "E"
align = 1
valign = 1

[node name="Control" type="Label" parent="WordBox/GameControls/QWE/E"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -90.0
margin_right = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Turn right"
align = 1
valign = 1
autowrap = true

[node name="R" type="Control" parent="WordBox/GameControls/QWE"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -200.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="WordBox/GameControls/QWE/R"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "R"
align = 1
valign = 1

[node name="Control" type="Label" parent="WordBox/GameControls/QWE/R"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -90.0
margin_right = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Talk"
align = 1
valign = 1
autowrap = true

[node name="A" type="Control" parent="WordBox/GameControls/QWE"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_right = -300.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="WordBox/GameControls/QWE/A"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A"
align = 1
valign = 1

[node name="Control" type="Label" parent="WordBox/GameControls/QWE/A"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -90.0
margin_right = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "\"Yes\""
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="Control" parent="WordBox/GameControls/QWE"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_right = -200.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="WordBox/GameControls/QWE/S"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "S"
align = 1
valign = 1

[node name="Control" type="Label" parent="WordBox/GameControls/QWE/S"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -90.0
margin_right = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Open settings"
align = 1
valign = 1
autowrap = true

[node name="D" type="Control" parent="WordBox/GameControls/QWE"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -200.0
margin_right = -100.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="WordBox/GameControls/QWE/D"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "D"
align = 1
valign = 1

[node name="Control" type="Label" parent="WordBox/GameControls/QWE/D"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -90.0
margin_right = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "\"No\""
align = 1
valign = 1
autowrap = true

[node name="F" type="Control" parent="WordBox/GameControls/QWE"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_bottom = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="WordBox/GameControls/QWE/F"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -50.0
margin_right = 50.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "F"
align = 1
valign = 1

[node name="Control" type="Label" parent="WordBox/GameControls/QWE/F"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -90.0
margin_right = 50.0
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Look"
align = 1
valign = 1
autowrap = true

[node name="MISC" type="Control" parent="WordBox/GameControls"]
margin_left = 549.0
margin_top = 150.0
margin_right = 949.0
margin_bottom = 550.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WordBox/GameControls/MISC"]
margin_right = 400.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SPACE pings the area (when using pinger)

ESCAPE quits the game

Navigate settings with arrow keys & ENTER"
align = 1
autowrap = true

[node name="CreditsPage" type="Control" parent="WordBox"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="WordBox/CreditsPage"]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WordBox/CreditsPage"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -360.0
margin_top = 32.0
margin_right = 361.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Credits & Thanks"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColumnA" type="Label" parent="WordBox/CreditsPage"]
margin_left = 75.0
margin_top = 150.0
margin_right = 475.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "This game was built in Godot Engine.

I also used Krita, Audacity, Beepbox, and Blender.

Plant model, wind blowing sounds from OpenGameArt"
align = 1
autowrap = true

[node name="ColumnB" type="Label" parent="WordBox/CreditsPage"]
margin_left = 549.0
margin_top = 150.0
margin_right = 949.0
margin_bottom = 550.0
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Fonts used in the game

Thanks to friends and family who tested the game and gave feedback.

And thank you for playing. It really means a lot."
align = 1
autowrap = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="SettingsPage" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, 3, 0.8, -0.4 )
mesh = SubResource( 6 )
material/0 = SubResource( 8 )

[node name="ViewportContainer" type="ViewportContainer" parent="SettingsPage"]
light_mask = 524288
margin_left = -464.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportSettings" type="Viewport" parent="SettingsPage/ViewportContainer"]
size = Vector2( 464, 600 )
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="SettingsSurvey" parent="SettingsPage/ViewportContainer/ViewportSettings" instance=ExtResource( 7 )]

[node name="ViewportKeybinds" type="Viewport" parent="SettingsPage/ViewportContainer"]
size = Vector2( 464, 600 )
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="Keybinds" parent="SettingsPage/ViewportContainer/ViewportKeybinds" instance=ExtResource( 8 )]

[connection signal="tween_all_completed" from="MoveTween" to="." method="_on_MoveTween_tween_all_completed"]
[connection signal="tween_started" from="MoveTween" to="." method="_on_MoveTween_tween_started"]
[connection signal="finished" from="DialoguePlayer" to="." method="_on_DialoguePlayer_finished"]
